[package]

name = "smoldown"
version = "0.1.0"
authors = ["Johann Hofmann <mail@johann-hofmann.com>"]
description = "Native Rust library for parsing Markdown"
edition = "2021"
repository = "https://github.com/bend-n/smoldown"
readme = "README.md"
keywords = ["markdown", "md", "html", "parser"]
license = "MIT OR Apache-2.0"

exclude = ["test.md"]

[dependencies]
regex = "1"

[dev-dependencies]
difference = "0.4"
